--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "nest-winston": "^1.9.1",
+    "nestjs-pino": "^4.0.0",
+    "pino-http": "^9.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "winston": "^3.8.2"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
