--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -55,13 +55,13 @@ securityContext:
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIp
   port: 80
   targetPort: 3000
 
 ingress:
-  enabled: true
-  className: 'ingress-nginx'
+  enabled: false
+  className: 'nginx'
   annotations:
     {}
     # kubernetes.io/ingress.class: nginx
