feat: updated deploy.yaml

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -55,7 +55,7 @@ securityContext:
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 80
   targetPort: 3000
 
@@ -67,7 +67,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: pfg-backend.local
+    - host: pfg-backend
       paths:
         - path: /
           pathType: Prefix
