--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -60,14 +60,14 @@ service:
   targetPort: 3000
 
 ingress:
-  enabled: false
+  enabled: true
   className: 'nginx'
   annotations:
     {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: pfg-backend
+    - host: pfg-backend.com
       paths:
         - path: /
           pathType: Prefix
