--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,9 +8,9 @@ vars:
   APP_PORT: '3000'
   MONGO_HOST: 'mongodb-svc'
   MONGO_PORT: '27017'
-  MONGO_USER: 'loopback'
+  MONGO_USERNAME: 'loopback'
   MONGO_PASSWORD: 'pass12345'
-  MONGO_DATABASE: 'mongodb-database'
+  MONGO_DATABASE: 'pfg-main'
   # MONGO_URI: 'mongodb://admin:pass12345@mongodb-0.mongodb-svc.default.svc.cluster.local:27017/admin?replicaSet=mongodb&ssl=false'
 
 imageCredentials:
@@ -21,7 +21,7 @@ imageCredentials:
 
 image:
   repository: 'registry.gitlab.com/jang0f377/nest-pfg-backend'
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: 'latest'
 
