--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -63,8 +63,8 @@ ingress:
   enabled: true
   className: 'nginx'
   annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: pfg-backend.com
