--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -55,7 +55,7 @@ securityContext:
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 80
   targetPort: 3000
 
@@ -64,10 +64,10 @@ ingress:
   className: 'nginx'
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: pfg-backend.com
+    - host: pfg-backend.test
       paths:
         - path: /
           pathType: Prefix
