--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ build-image:
     - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker buildx create --driver docker-container --name multi-arch --use
   script:
-    - echo "$CI_REGISTRY_IMAGE"
     - docker buildx build --platform linux/amd64,linux/arm64 --no-cache -t "$CI_REGISTRY_IMAGE:latest" .
+  when: manual
