--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,7 @@ build-image:
     - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker buildx create --driver docker-container --name multi-arch --use
   script:
-    - docker buildx build --platform linux/amd64,linux/arm64 --no-cache -t "$GL_BASE_IMAGE" .
+    - docker buildx build --platform linux/amd64 --no-cache -t "$GL_BASE_IMAGE" .
     - docker push $GL_BASE_IMAGE
   when: manual
