feat: updated package.json and docker* files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: development
+      target: build
     command: npm run start:dev
+    env_file: ./.env
     environment:
       - NODE_ENV=production
     networks:
